5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1764_672.log
== SUBMITION (2019-05-21 17:18:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy

-- EXECUTION TIME:
0.220689
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:

-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:20:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:15:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
numero inteiro = dtype=int ([6]) :
-- ERROR:
File "XXXX", line 3
    numero inteiro = dtype=int ([6]) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:18:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = zero (6,dtype=int) 
print n0
-- ERROR:
File "XXXX", line 4
    print n0
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(n0)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:18:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = zero (6,dtype=int) 
print (n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:18:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = zero (6,  dtype=int) 
print (n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:19:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = zero (6, dtype=int) 
print (n0)
-- EXECUTION TIME:
0.367026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 3, in <module>
    n0 = zero (6, dtype=int) 
NameError: name 'zero' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:19:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = zero (6, dtype=int) 
print (n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:19:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = (6, dtype=int) 
print (n0)
-- ERROR:
File "XXXX", line 3
    n = (6, dtype=int) 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:19:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = (6, dtype=int) :
print (n0)
-- ERROR:
File "XXXX", line 3
    n = (6, dtype=int) :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:19:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = (dtype=int) :
print (n0)
-- ERROR:
File "XXXX", line 3
    n = (dtype=int) :
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:21:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = (dtype=int) 
n1 int(input("digite o num: "))
print (n0)
-- ERROR:
File "XXXX", line 3
    n0 = (dtype=int) 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:21:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = (6, dtype=int) 
n1 int(input("digite o num: "))
print (n0)
-- ERROR:
File "XXXX", line 3
    n0 = (6, dtype=int) 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:22:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = zeros (6, dtype=int) 
n1 int(input("digite o num: "))
print (n0)
-- ERROR:
File "XXXX", line 4
    n1 int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:22:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = zeros (6, dtype=int) 

n1 = int(input("digite o num: "))

print (n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:23:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n0 = uns (6, dtype=int) 

n1 = int(input("digite o num: "))

print (n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:23:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n1 = uns (6, dtype=int) 

n2 = int(input("digite o num: "))

print (n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:24:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n1 = ones (6, dtype=int) 

n2 = int(input("digite o num: "))

print (n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:24:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n1 = ones (6, dtype=int) 

n2 = int(input("digite o num: "))

print (n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:24:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n1 = ones (6, dtype=int) 

n2 = int(input("digite o num: "))

print (n1)
-- EXECUTION TIME:
0.388191
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:24:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n1 = ones (6, dtype=int) 

n2 = int(input("digite o num: "))

print (n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:24:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n1 = ones (6, dtype=int) 

n2 = int(input("digite o num: "))

print (n1)
-- EXECUTION TIME:
0.383389
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n1 = ones (n2, dtype=int) 

n2 = int(input("digite o num: "))

print (n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:26:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n2 = int(input("digite o num: "))
n1 = ones (n2, dtype=int) 


print (n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:26:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n2 = int(input("digite o num: "))
n1 = ones (n2, dtype=int) 


print (n1)
-- EXECUTION TIME:
0.513479
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
